feat(recommend): 간단 추천, 상세 추천 구현 완료
#43